force-app/main/default/objects/Opportunity/fields/age2__c.field-meta.xml
<CustomField>
    <fullName>age2__c</fullName>
    <formula>IF(IsClosed,( 
 Account.Enqix_Start_Date__c  - Handed_to_Sales_date__c), 
NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>