force-app/main/default/objects/Opportunity/fields/Bid_or_Partner__c.field-meta.xml
<CustomField>
    <fullName>Bid_or_Partner__c</fullName>
    <label>Bid or Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Be Richmond</fullName>
            </value>
            <value>
                <fullName>Blue Bermondsey</fullName>
            </value>
            <value>
                <fullName>Brixton BID</fullName>
            </value>
            <value>
                <fullName>Cadogan Estate</fullName>
            </value>
            <value>
                <fullName>Camden Town Unlimited</fullName>
            </value>
            <value>
                <fullName>Chancery Lane Association</fullName>
            </value>
            <value>
                <fullName>Clapham BID</fullName>
            </value>
            <value>
                <fullName>Colmore BID</fullName>
            </value>
            <value>
                <fullName>Euston Town BID</fullName>
            </value>
            <value>
                <fullName>Fitzrovia Partnership</fullName>
            </value>
            <value>
                <fullName>Fulham Broadway</fullName>
            </value>
            <value>
                <fullName>Grosvenor Estate</fullName>
            </value>
            <value>
                <fullName>Heart of London</fullName>
            </value>
            <value>
                <fullName>Ilford BID</fullName>
            </value>
            <value>
                <fullName>InStreatham</fullName>
            </value>
            <value>
                <fullName>Jewellery Quarter</fullName>
            </value>
            <value>
                <fullName>Kingston First</fullName>
            </value>
            <value>
                <fullName>Love Wimbledon</fullName>
            </value>
            <value>
                <fullName>Ealing</fullName>
                <label>Make it Ealing</label>
            </value>
            <value>
                <fullName>New West End Company</fullName>
            </value>
            <value>
                <fullName>Paddington</fullName>
            </value>
            <value>
                <fullName>Pollen Estate</fullName>
            </value>
            <value>
                <fullName>Southside BID</fullName>
            </value>
            <value>
                <fullName>Station to Station</fullName>
            </value>
            <value>
                <fullName>Stratford BID</fullName>
                <label>Stratford Orriginal</label>
            </value>
            <value>
                <fullName>Successful Sutton</fullName>
            </value>
            <value>
                <fullName>Team London Bridge</fullName>
            </value>
            <value>
                <fullName>Try Twickenham</fullName>
            </value>
            <value>
                <fullName>Vauxhall</fullName>
            </value>
            <value>
                <fullName>Waterloo Quarter</fullName>
                <label>We Are Waterloo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>