force-app/main/default/objects/Opportunity/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>