force-app/main/default/objects/Opportunity/fields/Contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_end_date__c</fullName>
    <label>Contract end date</label>
    <type>Date</type>
</CustomField>