force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAYG</fullName>
                <default>true</default>
                <label>PAYG</label>
            </value>
            <value>
                <fullName>Wheelie bins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>