force-app/main/default/objects/Opportunity/fields/Days_between_handed_to_sales_and_close__c.field-meta.xml
<CustomField>
    <fullName>Days_between_handed_to_sales_and_close__c</fullName>
    <formula>IF(AND(ISBLANK( CloseDate ),ISBLANK( Handed_to_Sales_date__c )),NULL,CloseDate - Handed_to_Sales_date__c )</formula>
    <label>Days between handed to sales and close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>