force-app/main/default/objects/Opportunity/fields/Deal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Start_Date__c</fullName>
    <formula>IF(ISBLANK(Handed_to_Sales_date__c), DATEVALUE(CreatedDate), Handed_to_Sales_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Start Date</label>
    <type>Date</type>
</CustomField>