force-app/main/default/objects/Opportunity/fields/djkjj__c.field-meta.xml
<CustomField>
    <fullName>djkjj__c</fullName>
    <label>djkjj</label>
    <type>Email</type>
</CustomField>