force-app/main/default/objects/Opportunity/fields/Enqix_Classification__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Classification__c</fullName>
    <label>Enqix Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small (&lt;£250)</fullName>
            </value>
            <value>
                <fullName>Medium (£250 - £5000)</fullName>
            </value>
            <value>
                <fullName>Large (&lt;£5000 - £10000)</fullName>
            </value>
            <value>
                <fullName>Key Account (£10,000+)</fullName>
            </value>
            <value>
                <fullName>Indirect Medium (&lt;£10000)</fullName>
            </value>
            <value>
                <fullName>Indirect Large (&gt;£10000)</fullName>
            </value>
            <value>
                <fullName>BID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>