force-app/main/default/objects/Opportunity/fields/Enqix_Note__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Note__c</fullName>
    <label>Enqix Note`</label>
    <type>TextArea</type>
</CustomField>