force-app/main/default/objects/Opportunity/fields/Estimate_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Tonnage__c</fullName>
    <formula>(Estimated_Annual_Sales__c / 350)/253</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>