force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Sales__c</fullName>
    <label>Estimated Annual Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>