force-app/main/default/objects/Opportunity/fields/Formula_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Formula_Start_Date__c</fullName>
    <formula>IF((ISBLANK(Start_Date__c)),  CloseDate + 30 ,  Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Start Date</label>
    <type>Date</type>
</CustomField>