force-app/main/default/objects/Opportunity/fields/gaconnector_First_Click_Referrer__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_First_Click_Referrer__c</fullName>
    <label>First Click Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>