force-app/main/default/objects/Opportunity/fields/gaconnector_Last_Click_Content__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Last_Click_Content__c</fullName>
    <label>Last Click Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>