force-app/main/default/objects/Opportunity/fields/gaconnector_Last_Click_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Last_Click_Landing_Page__c</fullName>
    <label>Last Click Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>