force-app/main/default/objects/Opportunity/fields/gaconnector_Last_Click_Medium__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Last_Click_Medium__c</fullName>
    <label>Last Click Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>