force-app/main/default/objects/Opportunity/fields/gaconnector_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Operating_System__c</fullName>
    <label>Operating System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>