force-app/main/default/objects/Opportunity/fields/Google_Analytics_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Campaign__c</fullName>
    <label>Google Analytics Campaign</label>
    <type>TextArea</type>
</CustomField>