force-app/main/default/objects/Opportunity/fields/Google_Analytics_Content__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Content__c</fullName>
    <label>Google Analytics Content</label>
    <type>TextArea</type>
</CustomField>