force-app/main/default/objects/Opportunity/fields/Google_Analytics_Medium__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Medium__c</fullName>
    <label>Google Analytics Medium</label>
    <type>TextArea</type>
</CustomField>