force-app/main/default/objects/Opportunity/fields/Google_Analytics_Source__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Source__c</fullName>
    <label>Google Analytics Source</label>
    <type>TextArea</type>
</CustomField>