force-app/main/default/objects/Opportunity/fields/Google_Analytics_Term__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Term__c</fullName>
    <label>Google Analytics Term</label>
    <type>TextArea</type>
</CustomField>