force-app/main/default/objects/Opportunity/fields/Handed_to_Sales_date__c.field-meta.xml
<CustomField>
    <fullName>Handed_to_Sales_date__c</fullName>
    <label>Handed to Sales date</label>
    <type>Date</type>
</CustomField>