force-app/main/default/objects/Opportunity/fields/In_a_contract__c.field-meta.xml
<CustomField>
    <fullName>In_a_contract__c</fullName>
    <label>In a contract?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>