force-app/main/default/objects/Opportunity/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <label>Main Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>