force-app/main/default/objects/Opportunity/fields/Main_Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Main_Current_Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Current Supplier</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>