force-app/main/default/objects/Opportunity/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <formula>IF(gaconnector_First_Click_Medium__c = &quot;cpc&quot;,
IF(OR(CONTAINS(gaconnector_First_Click_Campaign__c, &quot;Brand&quot;),CONTAINS(gaconnector_First_Click_Content__c, &quot;First Mile&quot;)), &quot;Paid - Brand&quot;, &quot;Paid - Non Brand&quot;),
IF(gaconnector_First_Click_Medium__c = &quot;organic&quot;,
IF(OR(gaconnector_First_Click_Landing_Page__c=&quot;https://thefirstmile.co.uk/&quot;, gaconnector_First_Click_Landing_Page__c=&quot;https://www.thefirstmile.co.uk/&quot;), &quot;Organic - Brand&quot;, &quot;Organic - Non Brand&quot;),
IF(gaconnector_First_Click_Channel__c = &quot;gaconnector_fc_channel&quot;, &quot;NA&quot;,
IF(ISBLANK(gaconnector_First_Click_Medium__c)=True,
IF(ISBLANK(GCLID__c)=False, &quot;Paid -  Don&apos;t Know&quot;, &quot;NA&quot;), &quot;Digital - Other&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Source</label>
    <type>Text</type>
</CustomField>