force-app/main/default/objects/Opportunity/fields/OLDCAMPAIGN__c.field-meta.xml
<CustomField>
    <fullName>OLDCAMPAIGN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLDCAMPAIGN</label>
    <referenceTo>OLDCAMP__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>