force-app/main/default/objects/Opportunity/fields/Oportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Oportunity_Type__c</fullName>
    <label>Oportunity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Formal Tender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>