force-app/main/default/objects/Opportunity/fields/Opp_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Case Safe ID</label>
    <type>Text</type>
</CustomField>