force-app/main/default/objects/Opportunity/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <label>Originator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ana Hamilton</fullName>
            </value>
            <value>
                <fullName>Asha Bridewell</fullName>
            </value>
            <value>
                <fullName>Ben Mallett</fullName>
            </value>
            <value>
                <fullName>David Badu</fullName>
            </value>
            <value>
                <fullName>Francesca Cotton</fullName>
            </value>
            <value>
                <fullName>Freya Rose</fullName>
            </value>
            <value>
                <fullName>Jamie McCormack</fullName>
            </value>
            <value>
                <fullName>Joseph Cerasale</fullName>
            </value>
            <value>
                <fullName>Karys Coker</fullName>
            </value>
            <value>
                <fullName>Oliver Osborne</fullName>
            </value>
            <value>
                <fullName>Vinny Madhar</fullName>
            </value>
            <value>
                <fullName>Catherine Wood</fullName>
                <isActive>false</isActive>
                <label>Catherine Wood</label>
            </value>
            <value>
                <fullName>Laurie Briffett</fullName>
                <isActive>false</isActive>
                <label>Laurie Briffett</label>
            </value>
            <value>
                <fullName>Maria-Chiara Franco</fullName>
                <isActive>false</isActive>
                <label>Maria-Chiara Franco</label>
            </value>
            <value>
                <fullName>Owen Dunne</fullName>
                <isActive>false</isActive>
                <label>Owen Dunne</label>
            </value>
            <value>
                <fullName>Pailes Halai</fullName>
                <isActive>false</isActive>
                <label>Pailes Halai</label>
            </value>
            <value>
                <fullName>Rosie Munns</fullName>
                <isActive>false</isActive>
                <label>Rosie Munns</label>
            </value>
            <value>
                <fullName>Taku Ratcliff</fullName>
                <isActive>false</isActive>
                <label>Taku Ratcliff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>