force-app/main/default/objects/Opportunity/fields/Partnership_referred_by__c.field-meta.xml
<CustomField>
    <fullName>Partnership_referred_by__c</fullName>
    <label>Partnership referred by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_referred_by</valueSetName>
    </valueSet>
</CustomField>