force-app/main/default/objects/Opportunity/fields/Permanent_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Delivery_Note__c</fullName>
    <label>Permanent Delivery Note</label>
    <type>TextArea</type>
</CustomField>