force-app/main/default/objects/Opportunity/fields/primary_email__c.field-meta.xml
<CustomField>
    <fullName>primary_email__c</fullName>
    <label>primary email</label>
    <type>Email</type>
</CustomField>