force-app/main/default/objects/Opportunity/fields/proposal__c.field-meta.xml
<CustomField>
    <fullName>proposal__c</fullName>
    <label>proposal?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>