force-app/main/default/objects/Opportunity/fields/Proposal_or_better__c.field-meta.xml
<CustomField>
    <fullName>Proposal_or_better__c</fullName>
    <label>Proposal or better</label>
    <type>Date</type>
</CustomField>