force-app/main/default/objects/Opportunity/fields/Prospecting_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_Sales_Cycle__c</fullName>
    <formula>Start_Date__c - Handed_to_Sales_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospecting Sales Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>