force-app/main/default/objects/Opportunity/fields/Prospector__c.field-meta.xml
<CustomField>
    <fullName>Prospector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>