force-app/main/default/objects/Opportunity/fields/Reason_not_won__c.field-meta.xml
<CustomField>
    <fullName>Reason_not_won__c</fullName>
    <label>Reason not won</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetName>Reasons_Not_Won</valueSetName>
    </valueSet>
</CustomField>