force-app/main/default/objects/Opportunity/fields/Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle__c</fullName>
    <formula>DATETIMEVALUE(CloseDate)- DATETIMEVALUE(Deal_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>