force-app/main/default/objects/Opportunity/fields/Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Source_Category__c</fullName>
    <formula>IF(Marketing_Source__c&lt;&gt;&quot;NA&quot;, &quot;Marketing&quot;, 
CASE(LeadSource , &quot;Prospecting&quot;, &quot;Prospecting&quot;, &quot;Sopro&quot;, &quot;Prospecting&quot;, &quot;Brokers&quot;, &quot;Broker Development&quot;, &quot;Partnership&quot;, &quot;Partnership&quot;, &quot;Recommended by another customer&quot;, &quot;Organic&quot;,  &quot;Customer Referral&quot;, &quot;Organic&quot;, &quot;Google&quot;, &quot;Marketing&quot;, &quot;Got a leaflet&quot;, &quot;Marketing&quot;, &quot;Partnership Referral&quot;, &quot;Partnership&quot;, &quot;Google Adwords&quot;, &quot;Marketing&quot;, &quot;Account Manager&quot;, &quot;Account Manager&quot;, &quot;Organic - Google&quot;, &quot;Marketing&quot;, &quot;Organic - Bing&quot;, &quot;Marketing&quot;, &quot;Organic - Yahoo&quot;, &quot;Marketing&quot;, &quot;PPC&quot;, &quot;Marketing&quot;, &quot;Social Media&quot;, &quot;Marketing&quot;, &quot;Search Engine&quot;,&quot;Marketing&quot;, &quot;Email Marketing&quot;, &quot;Marketing&quot;, &quot;Paid Lead Generation Lead&quot;, &quot;Marketing&quot;, &quot;Organic&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Category</label>
    <type>Text</type>
</CustomField>