force-app/main/default/objects/Opportunity/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <description>Provides specific detail on how a lead originally found out about First Mile</description>
    <label>Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Detail</valueSetName>
    </valueSet>
</CustomField>