force-app/main/default/objects/Opportunity/fields/tggggg__c.field-meta.xml
<CustomField>
    <fullName>tggggg__c</fullName>
    <formula>coppp__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tgg</label>
    <type>Text</type>
</CustomField>