force-app/main/default/objects/Opportunity/fields/Who_won_it__c.field-meta.xml
<CustomField>
    <fullName>Who_won_it__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to competitors so BD can see who opportunities have been lost to.</description>
    <label>Who won it?</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunities (Who won it?)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>