force-app/main/default/objects/Opportunity/validationRules/Complete_partnership_referral.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_partnership_referral</fullName>
    <active>true</active>
    <description>Partnership referred by should not be blank if lead source = partnership referral</description>
    <errorConditionFormula>AND( ISPICKVAL(LeadSource, &quot;Partnership Referral&quot;),  ISPICKVAL(Partnership_referred_by__c, &quot;&quot; ))</errorConditionFormula>
    <errorMessage>&quot;Partnership referred by&quot; is required if lead source = &quot;partnership referral&quot;</errorMessage>
</ValidationRule>