force-app/main/default/objects/Opportunity/validationRules/Partnership.validationRule-meta.xml
<ValidationRule>
    <fullName>Partnership</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(LeadSource, &quot;Partnership&quot;),
    ISBLANK(Partner__c)
)</errorConditionFormula>
    <errorDisplayField>Partner__c</errorDisplayField>
    <errorMessage>Partner field must be filled out when Lead Source is &apos;Partnership</errorMessage>
</ValidationRule>