force-app/main/default/objects/Opportunity/listViews/Account_Manager_Opportunities.listView-meta.xml
<ListView>
    <fullName>Account_Manager_Opportunities</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Estimated_Annual_Sales__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Handed Over,Closed Lost 😞</value>
    </filters>
    <label>Account Manager Opportunities</label>
</ListView>