force-app/main/default/objects/Opportunity/listViews/All_Opportunities_Inbound_BD.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Inbound_BD</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Handed Over,Closed Lost 😞</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Kishen Resebalingam,Melania Ferremi,Hanna Ghemari,Tumi Olopade,Benjamin Cole,Onome Emovon</value>
    </filters>
    <label>All Opportunities - Inbound/BD</label>
</ListView>